--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'org.litepal.android:core:2.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
